<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".scanner.ScanActivity">

    <Button
        android:id="@+id/CalcBtn_3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/button"
        android:text="Сохранить"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FIO_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/FIO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/FIO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLength="160"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Sum_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:hint="@string/Sum"
        app:layout_constraintBottom_toTopOf="@+id/CalcBtn_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/Sum"
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:ems="10"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Adress_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/payerAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FIO_lay">


        <EditText
            android:id="@+id/Adress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:maxLength="160"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PersonalAcc_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/PersonalAcc"
        app:layout_constraintBottom_toTopOf="@+id/PersAcc_lay">

        <EditText
            android:id="@+id/PersonalAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:inputType="number"
            android:maxLength="20"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/payeeINN_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/payeeINN"
        app:layout_constraintBottom_toTopOf="@+id/PersonalAcc_lay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/payeeINN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:inputType="number"
            android:maxLength="12"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PersAcc_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/PersAcc"
        app:layout_constraintBottom_toTopOf="@+id/Purpose_lay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/PersAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:inputType="text"
            android:maxLength="18"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CorrespAcc_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/CorrespAcc"
        app:layout_constraintBottom_toTopOf="@+id/payeeINN_lay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/CorrespAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:inputType="number"
            android:maxLength="12"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Purpose_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Purpose"
        app:layout_constraintBottom_toTopOf="@+id/COR_PER_lay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/Purpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:inputType="text"
            android:maxLength="210"
            android:minHeight="48dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/COR_PER_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/COR_PER"
        app:layout_constraintBottom_toTopOf="@+id/Sum_lay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97">

        <EditText
            android:id="@+id/COR_PER"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:maxLength="7"
            android:inputType="date"
            android:minHeight="48dp" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>